--- a/connect_four/style.css
+++ b/connect_four/style.css
@@ -1,3 +1,43 @@
+#title {
+    align-items: center;
+    justify-content: center;
+    color: teal;
+    text-align: center
+}
+
 body {
-    background-color: coral;
+    background-color: rgb(0, 0, 0);
+}
+
+#container {
+    background-color: darkcyan;
+}
+
+.square {
+    width: 100px;
+    height: 90px;
+    padding-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.border-bottom-left{
+    border-bottom: 1px solid rgb(255, 255, 255);
+    border-left: 1px solid rgb(255, 255, 255);
+    
+}
+
+.border-top-right {
+    border-top: 1px solid rgb(255, 255, 255);
+    border-right: 1px solid rgb(255, 255, 255);
+    
+    
+}
+
+.row {
+    display: flex;
 }
