--- a/connect_four/style.css
+++ b/connect_four/style.css
@@ -10,10 +10,8 @@ body {
 #container {
     background-color: black;
     align-content: center;
-    justify-content: space-around;
-    align-items: center;
+    text-align: center;
     display: inline-block;
-    
 }
 
 .square {
