--- a/connect_four/style.css
+++ b/connect_four/style.css
@@ -62,7 +62,7 @@ body {
     font-size: 2em;
 }
 
-.slide-in-top {
+#slide-in-top {
 	-webkit-animation: slide-in-top 1s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
 	        animation: slide-in-top 1s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
 }
