--- a/connect_four/style.css
+++ b/connect_four/style.css
@@ -19,12 +19,12 @@ body {
     display: grid;
     justify-content: center;
     align-items: center;
-    border: 30px solid lightcoral;
-    margin: 0;
+    border: 20px solid lightcoral;
+    /* margin: 0; */
 }
 
 .square {
-    width: 100px;
+    width: 95px;
     height: 90px;
     padding-bottom: 10px;
     display: flex;
