added id to row

--- a/connect_four/style.css
+++ b/connect_four/style.css
@@ -11,6 +11,7 @@ body {
 
 #container {
     background-color: lightcoral;
+    width: 95%;
     /* align-content: center; */
     /* text-align: center;
     display: inline-block; */
