--- a/connect_four/style.css
+++ b/connect_four/style.css
@@ -9,6 +9,10 @@ body {
     background-color: thistle;
 }
 
+#msg {
+  font-size: 20px;
+}
+
 #score {
   font-size: 20px;
 }
@@ -67,13 +71,38 @@ body {
 }
 
 #modal-textbox {
-    background-color: white;
+    background-color: lightpink;
+    border: 2px solid hotpink;
     border-radius: 8px;
     padding: 25px 50px;
     box-shadow: 0 0 8px black;
     font-size: 2em;
 }
 
+#play-again {
+  font-size: 20px;
+  border: 2px solid hotpink;
+  background-color: lightpink;
+  border-radius: 8px;
+  padding: 25px 50px;
+  box-shadow: 0 0 8px black;
+  font-size: 2em;
+  cursor: pointer;
+}
+#play-again:link {
+  text-decoration: none;
+}
+#play-again:visited {
+  text-decoration: none;
+}
+
+#play-again:hover {
+  background-color: hotpink;
+}
+
+#play-again:active {
+  text-decoration: none;
+}
 .slide-in-top {
 	-webkit-animation: slide-in-top 1s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
 	        animation: slide-in-top 1s cubic-bezier(0.785, 0.135, 0.150, 0.860) both;
@@ -86,6 +115,7 @@ body {
   background-color: lightpink;
   border-radius: 8px;
   text-align: center;
+  cursor: pointer;
 }
 
 a:link {
