--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
   border: 15px solid lightcoral;
   padding: 1px;
   margin-bottom: 20px;
+  height: 60%;
+
 }
 
 #msg-text {
@@ -36,8 +38,8 @@ body {
 }
 
 .square {
-    width: 95px;
-    height: 90px;
+    width: 89px;
+    height: 84px;
     padding-bottom: 10px;
     display: flex;
     justify-content: center;
