--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/* default style for mobile */
+/* default style for desktop */
 #title {
     color: teal;
     text-align: center;
@@ -16,7 +16,6 @@ body {
   padding: 1px;
   margin-bottom: 20px;
   height: 60%;
-
 }
 
 #msg-text {
@@ -153,20 +152,30 @@ a:active {
 
 
 
+/* styles for mobile */
 
-/* styles for desktop when the browser is 600px or above */
-@media (min-width: 600px) {
-body {
-  background: thistle;
-}
-
-#container {
-  margin: 0px;
-}
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
 
 }
 
-
+/* Portrait and Landscape */
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) {
+  #container {
+    width: 360px;
+  }
+  
+  .square {
+    width: 200px;
+    height: 4px;
+  }
+}
 
 
 
